# libmirisdr-4

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile.in  HOWTO  README  build.sh  configure.ac
include/: CMakeLists.txt  Makefile.am  mirisdr.h
src/: Makefile.am  Makefile.mingw  Makefile.mingw-win  async.c  convenience.c  devices.c  gain.c  hard.c  libmirisdr.c  miri_fm.c  miri_sdr.c  reg.c  soft.c  soft.h  structs.h
